<resources>
    <string name="app_name">NavigationBar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_web_client_id">928802842212-j3d39ahn8nujh5j068jb0gs7v2r4nnq8.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="need_to_sign_up">Need to sign up?</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_warning">Your password must include 6 characters: 1 lowercase, 1 uppercase, 1 special character, and no blank spaces</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_world">Hello World</string>
</resources>